--- a/server/.env.example
+++ b/server/.env.example
@@ -1,9 +1,10 @@
 NODE_ENV=development
 
-DEV_DB_NAME=pern_app_jwt
-DEV_DB_USERNAME=testuser
-DEV_DB_PASSWORD=root
-DEV_DB_HOST=db
+PORT=7000
+CLIENT_URL=http://localhost:3000
 
-DEV_SERVER_PORT=7000
-DEV_CLIENT_URL=http://localhost:3000
+DB_NAME=pern_app_jwt
+DB_USERNAME=testuser
+DB_PASSWORD=root
+DB_PORT=5432
+DB_HOST=db
